--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-session": "^1.17.2",
+    "lorem-ipsum": "^2.0.3",
     "mongoose": "^5.12.10",
     "passport": "^0.4.1",
     "passport-local-mongoose": "^6.1.0"
