--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lorem-ipsum": "^2.0.3",
     "mongoose": "^5.12.10",
     "passport": "^0.4.1",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-local-mongoose": "^6.1.0",
+    "socket.io": "^4.1.2"
   }
 }
